# RT-Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
UI/: CMakeLists.txt  DebugInfo.cpp  DebugInfo.h
include/: Application.h  Assets.h  Game.h  GameController.h  GameModel.h  GameRender.h
include/Gameplay/: Camera.h  HUD.h  Map.h
include/Gameplay/Characters/: BaseCharacter.h
include/Gameplay/Map/: Map.h  Tile.h
include/Gameplay/Map/Characters/: BaseCharacter.h
include/Gameplay/Map/Tiles/: Cliff.h
include/Gameplay/Players/: BasePlayer.h  Bot.h  Player.h
include/Gameplay/Tiles/: BaseTile.h  Cliff.h
include/Gameplay/Units/: BaseUnit.h
include/Gameplay/Units/Buildings/: Base.h  BaseBuilding.h
include/Gameplay/Units/Characters/: BaseCharacter.h
include/Screen/: BaseScreen.h  Game.h  GameOver.h  Menu.h  Settings.h
include/UI/: Button.h  SwitchButton.h  TurnOnOffButton.h  UIElement.h
include/Utilities/: AStar.h  DebugInfo.h  FPSCounter.h
src/: Application.cpp  Game.cpp  GameController.cpp  GameModel.cpp  GameRender.cpp  main.cpp
src/Gameplay/: Camera.cpp  HUD.cpp  Map.cpp  Tile.cpp
src/Gameplay/Characters/: BaseCharacter.cpp
src/Gameplay/Map/Characters/: BaseCharacter.cpp
src/Gameplay/Map/Tiles/: BaseTile.cpp  Cliff.cpp
src/Gameplay/Players/: BasePlayer.cpp  Bot.cpp  Player.cpp
src/Gameplay/Tiles/: BaseTile.cpp  Cliff.cpp
src/Gameplay/Units/: BaseUnit.cpp
src/Gameplay/Units/Buildings/: Base.cpp  BaseBuilding.cpp
src/Gameplay/Units/Characters/: BaseCharacter.cpp
src/Screen/: BaseScreen.cpp  Game.cpp  GameOver.cpp  Menu.cpp  Settings.cpp
src/UI/: Button.cpp  SwitchButton.cpp  TurnOnOffButton.cpp
src/Utilities/: AStar.cpp  DebugInfo.cpp  FPSCounter.cpp
